--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "interactive-template-2017",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "atoms/main/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --env.development",
@@ -15,6 +15,7 @@
     "babel-cli": "^6.24.1",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "clean-webpack-plugin": "^0.1.15",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
